--- a/src/components/TopPage.astro
+++ b/src/components/TopPage.astro
@@ -28,8 +28,8 @@ import Prenom from "./Prenom.astro";
             <h3 class="text-black text-2xl lg:text-4xl">
                 Je suis <strong class="underline">Développeur</strong> et <strong
                     class="underline">Étudiant</strong
-                ><br /> Je suis aussi à la recherche d'une <strong
-                    class="underline">Alternance</strong
+                ><br /> Je suis aussi à la recherche d'un <strong
+                    class="underline">Stage</strong
                 >
                 <a
                     href="/assets/CV_LilianBrossard.pdf"
